--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <a href="#" id="solutions">Solutions</a>
                         <a href="#" id="community">Community</a>
                         <a href="#" id="resources">Resources</a>
-                        <a href="about.html" id="about">About</a>
+                        <a href="/about" id="about">About</a>
                     </nav>
                 </div>
                 <div class="right">
