--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <title>About Us</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    
     <!-- Custom Notifications -->
     <div id="notificationContainer"></div>
 
@@ -83,7 +83,7 @@
 
     <div class="home-header">
         <div class="left">
-            <a class="logo" href="#">
+            <a class="logo" href="/index">
                 <img src="main_logo.png" alt="logo">
             </a>
             <nav>
@@ -223,5 +223,7 @@
 
         </div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
