--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <p class="dop-links"><a href="" id="resetPasswordLink">Забули пароль?</a></p>
         <p class="dop-links">
             <span class="pre-link-text-log">Немає акаунту? </span>
-            <a href="" id="switchToRegister">Створити акаунт</a>
+            <a href="/index" id="switchToRegister">Створити акаунт</a>
         </p>
         </div>
     </div>
@@ -59,7 +59,7 @@
                 </button>
             <p class="dop-links">
                 <span class="pre-link-text-start">Вже є акаунт? </span>
-                <a href="" id="switchToLogin">Увійти</a>
+                <a href="/index" id="switchToLogin">Увійти</a>
             </p>
         </div>
     </div>
