--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div id="landingPage" class="homepage">
             <div class="home-header">
                 <div class="left">
-                    <a class="logo" href="#">
+                    <a class="logo" href="/index">
                         <img src="main_logo.png" alt="logo">
                     </a>
                     <nav>
