--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
                                     <span class="lang-flag">🇬🇧</span>
                                     <span class="lang-name">English</span>
                                 </div>
+                                <div class="language-option" data-lang="ru">
+                                    <span class="lang-flag">🇷🇺</span>
+                                    <span class="lang-name">Русский</span>
+                                </div>
                             </div>
                         </div>
                     </div>
