--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <input type="email" class="email-input" id="loginEmail" placeholder="ЕЛЕКТРОННА ПОШТА">
                 <input type="password" class="email-input" id="loginPassword" placeholder="ПАРОЛЬ">
 
-                <a class="email-btn" id="loginButton" href="/index">
+                <button class="email-btn" id="loginButton">
                     <span class="arrow">→</span>
                     <span class="txt">Увійти</span>
-                </a>
+                </button>
                 <p class="dop-links"><a href="" id="resetPasswordLink">Забули пароль?</a></p>
                 <p class="dop-links">
                     <span class="pre-link-text-log">Немає акаунту? </span>
@@ -53,10 +53,10 @@
                 <input type="password" class="email-input" id="regPassword" placeholder="ПАРОЛЬ">
                 <input type="password" class="email-input" id="regConfirmPassword" placeholder="ПІДТВЕРДІТЬ ПАРОЛЬ">
 
-                <a class="email-btn" id="registerButton" href="/index">
+                <button class="email-btn" id="registerButton">
                     <span class="arrow">→</span>
                     <span class="txt">Зареєструватися</span>
-                </a>
+                </button>
                 <p class="dop-links">
                     <span class="pre-link-text-start">Вже є акаунт? </span>
                     <a href="" id="switchToLogin">Увійти</a>
